---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2025-02-04
  Changes:
    - Undo/Redo preserves combinator configuration
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2025-01-29
  Info:
    - Initial release