@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.1
-Date: ????
-  Changes:
+Date: 2025-02-04
+  Bugfixes:
+    - Fix compaktcircuit support
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.0
 Date: 2025-02-04
